--- a/ScheduleApp/ScheduleApp/ScheduleApp.Droid/Properties/AndroidManifest.xml
+++ b/ScheduleApp/ScheduleApp/ScheduleApp.Droid/Properties/AndroidManifest.xml
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
-	<uses-sdk android:minSdkVersion="19" android:targetSdkVersion="21" />
-	<application></application>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="ScheduleApp.ScheduleApp" android:versionCode="1" android:versionName="1" android:installLocation="auto">
+	<uses-sdk android:minSdkVersion="19" />
+	<uses-permission android:name="android.permission.PERSISTENT_ACTIVITY" />
+	<uses-permission android:name="android.permission.STATUS_BAR" />
+	<application android:label="ScheduleApp"></application>
 </manifest>
